--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "next": "16.0.5",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "mermaid": "^10.9.1",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "zustand": "^5.0.8"
